# nRF5_SDK_CMake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md  segger_gdb.txt
.github/workflows/: ccpp.yml
CMake/: Board.cmake  FindSDK.cmake  Nrfjprog.cmake  Platform.cmake  SoftDevice.cmake  Toolchain.cmake
CMake/architecture/: cortex-m4f.cmake
CMake/board/: pca10040.cmake
CMake/nRF5_SDK/: nRF5_SDK_16.0.0_98a08e2.cmake
CMake/nRF5_SDK/config/: sdk_config.h
CMake/platform/: nrf52832_xxAA.cmake
CMake/softdevice/: s132_7.0.1.cmake
CMake/toolchain/: gccarmemb.cmake
emteq-vr-usb/: CMakeLists.txt  emteq-vr.c  emteq-vr.h
test_app1/: CMakeLists.txt  main.c
